crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@500.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_result SELECT t1.id, t2.id, t1.val + t2.val\n    FROM num_data t1, num_data t2;"
---
InsertStmt@0..94
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "num_result"
  Whitespace@22..23 " "
  SelectStmt@23..93
    Select@23..29 "SELECT"
    Whitespace@29..30 " "
    ResTarget@30..35
      ColumnRef@30..35
        Ident@30..32 "t1"
        Ascii46@32..33 "."
        Ident@33..35 "id"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..42
      ColumnRef@37..42
        Ident@37..39 "t2"
        Ascii46@39..40 "."
        Ident@40..42 "id"
    Ascii44@42..43 ","
    Whitespace@43..44 " "
    ResTarget@44..59
      AExpr@44..59
        ColumnRef@44..50
          Ident@44..46 "t1"
          Ascii46@46..47 "."
          Ident@47..50 "val"
        Whitespace@50..51 " "
        Ascii43@51..52 "+"
        Whitespace@52..53 " "
        ColumnRef@53..59
          Ident@53..55 "t2"
          Ascii46@55..56 "."
          Ident@56..59 "val"
    Newline@59..60 "\n"
    Whitespace@60..64 "    "
    From@64..68 "FROM"
    Whitespace@68..69 " "
    RangeVar@69..80
      Ident@69..77 "num_data"
      Whitespace@77..78 " "
      Alias@78..80
        Ident@78..80 "t1"
    Ascii44@80..81 ","
    Whitespace@81..82 " "
    RangeVar@82..93
      Ident@82..90 "num_data"
      Whitespace@90..91 " "
      Alias@91..93
        Ident@91..93 "t2"
  Ascii59@93..94 ";"

