crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@515.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_result SELECT t1.id, t2.id, round(t1.val * t2.val, 30)\n    FROM num_data t1, num_data t2;"
---
InsertStmt@0..105
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "num_result"
  Whitespace@22..23 " "
  SelectStmt@23..104
    Select@23..29 "SELECT"
    Whitespace@29..30 " "
    ResTarget@30..35
      ColumnRef@30..35
        Ident@30..32 "t1"
        Ascii46@32..33 "."
        Ident@33..35 "id"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..42
      ColumnRef@37..42
        Ident@37..39 "t2"
        Ascii46@39..40 "."
        Ident@40..42 "id"
    Ascii44@42..43 ","
    Whitespace@43..44 " "
    ResTarget@44..69
      FuncCall@44..69
        Ident@44..49 "round"
        Ascii40@49..50 "("
        AExpr@50..65
          ColumnRef@50..56
            Ident@50..52 "t1"
            Ascii46@52..53 "."
            Ident@53..56 "val"
          Whitespace@56..57 " "
          Ascii42@57..58 "*"
          Whitespace@58..59 " "
          ColumnRef@59..65
            Ident@59..61 "t2"
            Ascii46@61..62 "."
            Ident@62..65 "val"
        Ascii44@65..66 ","
        Whitespace@66..67 " "
        AConst@67..69
          Iconst@67..69 "30"
    Ascii41@69..70 ")"
    Newline@70..71 "\n"
    Whitespace@71..75 "    "
    From@75..79 "FROM"
    Whitespace@79..80 " "
    RangeVar@80..91
      Ident@80..88 "num_data"
      Whitespace@88..89 " "
      Alias@89..91
        Ident@89..91 "t1"
    Ascii44@91..92 ","
    Whitespace@92..93 " "
    RangeVar@93..104
      Ident@93..101 "num_data"
      Whitespace@101..102 " "
      Alias@102..104
        Ident@102..104 "t2"
  Ascii59@104..105 ";"

