crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@524.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_result SELECT id, 0, SQRT(ABS(val))\n    FROM num_data;"
---
InsertStmt@0..70
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "num_result"
  Whitespace@22..23 " "
  SelectStmt@23..69
    Select@23..29 "SELECT"
    Whitespace@29..30 " "
    ResTarget@30..32
      ColumnRef@30..32
        Ident@30..32 "id"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    ResTarget@34..35
      AConst@34..35
        Iconst@34..35 "0"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..49
      FuncCall@37..49
        Ident@37..41 "SQRT"
        Ascii40@41..42 "("
        FuncCall@42..49
          Ident@42..45 "ABS"
          Ascii40@45..46 "("
          ColumnRef@46..49
            Ident@46..49 "val"
    Ascii41@49..50 ")"
    Ascii41@50..51 ")"
    Newline@51..52 "\n"
    Whitespace@52..56 "    "
    From@56..60 "FROM"
    Whitespace@60..61 " "
    RangeVar@61..69
      Ident@61..69 "num_data"
  Ascii59@69..70 ";"

